fixes text align

--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,7 @@ code {
 
 
 .container h1 {
+  text-align: center;
   font-size: 3rem;
   margin-bottom: 0.1rem;
 }
